# TELEBOT_YLA

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_INSTRUCTIONS.md  additional_recommendations.txt  ai-project  core_calculator_analysis_report.txt  current_rate.txt  deep_code_analysis_instructions.txt  exclude.txt  instruction_for_open_in_availibility_handler.txt  instruction_for_open_in_availibility_handler2.txt  instruction_for_test_writening.txt  men_general.txt  product_types.json  project_recovery_guide.md  pyproject.toml  pytest.ini  recovery.sh  refactoring_instructions_for_chatgpt.txt  refactoring_plan.txt  requirements.txt  start_ai_agent.sh  tmp_465_us.html  updating_since_recomenfation_of_open_int_from_CHAT_GPT.md  weights.json  что нужно реализовать еще
bot/: keyboards.py  main.py  menu_handler.py
docs/: CONTRIBUTING.md  INIT_STYLEGUIDE.md  README_STYLEGUIDE.md  ROADMAP.md  STYLEGUIDE.md  TODO.md  YAML_STYLEGUIDE.md  docker-compose.yml  dto-wrackdown.yaml  style_refactor_progress.md  Статус рефакторинга проекта
errors/: error_handler.py
html_pages/: ColectionDIV.html  MainPAGE.html  MainPageWithFulledSeardhField.html  ProductWomenPageW3155.html  SearchYLA.html  TroubleStuffPage4198.html  eu_collect.html  eu_profuct_page.html  old_html_product.html  old_us_product_page.html  uk_collect.html  uk_profuct_page.html  us_collect.html  us_profuct_page.html
logs/: bot.log.2025-07-21  bot.log.2025-07-27  bot.log.2025-07-28  bot.log.2025-07-29  bot.log.2025-07-30  bot.log.2025-08-05  bot.log.2025-08-06  (+10 more)
(+477 files in other folders)
