[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
pillow = "^10.0.0"
telegram = "^0.0.1"
python-telegram-bot = "20.4"
# HTML parsing
lxml = "^5.3.0"

# ⬇️ новое: dev-группа
[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"
black = "^24.10.0"
pyright = "^1.1.388"
pytest = "^8.3.3"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
coverage = "^7.6.1"

[tool.ruff]
select = ['E','W','F','I','B','C4','ARG','SIM']
ignore = ['W291','W292','W293']
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pyright]
useLibraryCodeForTypes = true
pythonVersion = "3.10"
# ограничим область анализа, чтобы ускорить CI
include = ["src/app"]
venvPath = "."
venv = ""  # пусть pyright сам найдёт venv Poetry

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = ["venv",".*","build","dist","node_modules","ai-project*"]
addopts = "-q --cov=src/app --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
branch = true
source = ["src/app"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
